🥸 반응형 완료

--- a/src/assets/scss/section/_career.scss
+++ b/src/assets/scss/section/_career.scss
@@ -1,6 +1,6 @@
 .home-career__inner {
   margin: 0 auto;
-  padding-top: max(4.5rem, min(11.8447vw + 1.72391rem, 15.9375rem));
+  // padding-top: max(4.5rem, min(11.8447vw + 1.72391rem, 15.9375rem));
   padding-bottom: max(4.5rem, min(11.8447vw + 1.72391rem, 15.9375rem));
 
   .docs-hero__content {
