--- a/src/assets/scss/section/_contact.scss
+++ b/src/assets/scss/section/_contact.scss
@@ -22,6 +22,7 @@
       align-items: center;
       justify-content: space-between;
       gap: 1rem;
+      padding-bottom: max(4.5rem, min(11.8447vw + 1.72391rem, 15.9375rem));
 
       @media (min-width: 768px) {
         display: flex;
@@ -29,6 +30,7 @@
         align-items: center;
         justify-content: space-between;
         flex-direction: row-reverse;
+        padding-bottom: 0px;
       }
 
       img {
