--- a/src/assets/scss/section/_projects.scss
+++ b/src/assets/scss/section/_projects.scss
@@ -1,5 +1,6 @@
 .home-projects {
-  overflow: hidden;
+  // overflow: hidden;
+  // padding-bottom: max(4.5rem, min(11.8447vw + 1.72391rem, 15.9375rem));
 
   .container {
     position: relative;
@@ -32,7 +33,6 @@
 
   .projects__wrap {
     margin: 0 auto;
-
     top: -22px;
     left: -40%;
     position: relative;
@@ -40,7 +40,7 @@
     .swiper {
       position: relative;
       width: 180%;
-      margin-bottom: 2rem;
+      padding-bottom: max(4.5rem, min(11.8447vw + 1.72391rem, 15.9375rem));
 
       .swiper-wrapper {
         .swiper-slide {
@@ -48,10 +48,37 @@
           padding-bottom: 9.5rem;
 
           .projects-item {
+            position: relative;
             border-radius: 0.5rem;
 
             video {
               border-radius: 0.5rem;
+            }
+
+            &:hover {
+              .item__info {
+                opacity: 1;
+                transition: all 0.3s;
+              }
+            }
+
+            .item__info {
+              display: none;
+              opacity: 0;
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              background-color: rgba(0, 0, 0, 0.8);
+              border-radius: 0.5rem;
+              font-size: 18px;
+              line-height: 2rem;
+
+              > div {
+                @include position-center;
+                width: 70%;
+              }
             }
           }
 
@@ -62,7 +89,7 @@
 
           &.swiper-slide-active {
             transform: scale(0.9);
-            top: -1.6vw;
+            top: -2.1vw;
             z-index: 2;
             opacity: 1;
           }
@@ -145,10 +172,93 @@
       margin-left: 35%;
       width: 100%;
       height: auto;
+      padding-bottom: max(4.5rem, min(13.8447vw + 1.72391rem, 15.9375rem));
 
-      .projects__title {
+      .projects__detail {
         font-size: max(1.25rem, min(0.2589vw + 1.18932rem, 1.5rem));
+
+        .projects__title {
+          margin-right: 10px;
+        }
+
+        .projects__info {
+          position: relative;
+          z-index: 10;
+
+          .icon {
+            display: inline-block;
+            width: 18px;
+            height: 18px;
+            background-size: cover;
+            background-image: url(../../img/icon_info.png);
+            background-position: center center;
+            background-repeat: no-repeat;
+            cursor: pointer;
+          }
+
+          .header__dropdown {
+            opacity: 0;
+            padding-top: 0.6875rem;
+            position: absolute;
+            top: 0px;
+            transform: translateY(32px);
+            transition: transform 0.15s var(--ease-in), opacity 0.15s var(--ease-in), visibility 0s 0.15s;
+            visibility: hidden;
+
+            &:before {
+              background-color: rgba(0, 0, 0, 0.35);
+              border-radius: 0.4375rem;
+              bottom: 0;
+              content: "";
+              display: block;
+              left: 0;
+              opacity: 0;
+              position: absolute;
+              right: 0;
+              top: 0.6875rem;
+              transition: transform 0.15s var(--ease-in) 0.15s, opacity 0.15s var(--ease-in) 0.15s;
+            }
+
+            &.header__dropdown--tools {
+              // left: calc(50% - 3.375rem);
+              left: calc(50% - 28.375rem);
+
+              .header__dropdown-wrapper {
+                width: 35.875rem;
+                // word-break: keep-all;
+
+                .header__dropdown-notch {
+                  left: 28.25rem;
+                  transform: translate(-50%, -100%);
+                }
+              }
+            }
+
+            &.active {
+              opacity: 1;
+              visibility: visible;
+            }
+
+            .header__dropdown-wrapper {
+              background-color: var(--color-just-black);
+              border: 0.125rem solid var(--color-surface-white);
+              border-radius: 0.4375rem;
+              position: relative;
+
+              .header__dropdown-notch {
+                position: absolute;
+                top: 0.0625rem;
+              }
+
+              .header__dropdown-menu {
+                padding: 2.4375rem;
+                font-size: 17px;
+              }
+            }
+          }
+        }
       }
+
       .projects__label {
         color: var(--color-surface50);
         font-size: 0.875rem;
@@ -209,12 +319,12 @@
             height: 22rem;
             border-radius: 22rem;
             top: 4rem;
-            right: 14rem;
+            right: 13rem;
           }
 
           &:hover {
             &:before {
-              top: -130%;
+              top: -190%;
               transform: translateX(70%);
             }
           }
@@ -259,6 +369,14 @@
 
   .swiper-button-next {
     left: 80.5vw !important;
+  }
+
+  .projects__info {
+    display: none;
+  }
+
+  .item__info {
+    display: block !important;
   }
 }
 
