🥸 반응형 완료

--- a/src/assets/scss/section/_skills.scss
+++ b/src/assets/scss/section/_skills.scss
@@ -43,7 +43,7 @@
           --panel-theme: var(--color-ui-text-gradient);
         }
         &:nth-child(2) {
-          --panel-theme: var(--color-scroll-gradient);
+          --panel-theme: var(--color-ui-htmlcss-gradient);
         }
         &:nth-child(3) {
           --panel-theme: var(--color-svg-gradient);
