--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -37,6 +37,7 @@
   --color-ui-blue-lt: #e1faff;
   --color-ui-blue-codeblk: #f6feff;
   --color-ui-text-gradient: linear-gradient(168.89deg, #fec5fb -21.3%, #00bae2 89.88%);
+  --color-ui-htmlcss-gradient: linear-gradient(168.89deg, #fb9f9f 10.88%, #00bae2 89.88%);
   --color-ui-code-blocktext-gradient: linear-gradient(142.91deg, #cef6ff 18.75%, #a6efff 54.93%);
   --color-ui-gradient: radial-gradient(
     78.77% 78.77% at 71.71% 30.77%,
