--- a/src/assets/scss/section/_career.scss
+++ b/src/assets/scss/section/_career.scss
@@ -77,7 +77,7 @@
             color: #fff;
             background: #343440;
             border-radius: 10px;
-            padding: 10px;
+            padding: 15px 10px 10px;
             width: 13%;
             display: flex;
             align-items: center;
